syntax = "proto3";
package booksapp;

service BookInfo {
  rpc addBook(Book) returns (BookID);
  rpc getBook(BookID) returns (Book);
  rpc deleteBook(BookID) returns (Status);
  rpc updateBook(BookUpdate) returns (Book);
}

message Book {
  string Id = 1;
  string Title = 2;
  string Edition = 3;
  string Copyright = 4;
  string Language = 5;
  string Pages = 6;
  string Author = 7;
  string Publisher = 8;
}

message BookUpdate {
  Book Update = 1;
  BookID Id = 2;
}

message Status {
  string Status = 1;
  string Mensaje = 2;
}

message BookID {
  string value = 1;
}